--- a/FreeCodeCampPlayGround/Content/profile.css
+++ b/FreeCodeCampPlayGround/Content/profile.css
@@ -10,7 +10,6 @@ body {
 }
 
 .intro {
-    top: 0;
     background: linear-gradient(lightblue, rgba(0, 0, 0, 0.5)), url(https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
     background-repeat: no-repeat;
     background-size: cover;
@@ -58,6 +57,7 @@ nav ul {
 
 .work {
     padding-top: 40px;
+    padding-bottom: 40px;
     background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 30, 0.3));
 }
 
@@ -129,12 +129,16 @@ nav ul {
 
 .contact {
     background: linear-gradient(rgba(0, 36, 50, 0.5), rgba(0, 0, 0, 0.2)), #445e60;
-
-    padding-bottom: 160px;
+    padding-bottom: 100px;
 }
 
 .header {
-    padding: 160px 0 110px;
+    color: whitesmoke;
+    padding: 40px 0 100px;
+}
+
+.body-fill{
+    height: 100%;
 }
 
 .contact-details {
@@ -142,8 +146,7 @@ nav ul {
     font-weight: bold;
     margin: 0 35px 45px 35px;
     list-style-type: none;
-    border: 2px solid #90C695;
-    border-radius: 100%;
+    border-radius: 10%;
     width: 100px;
     height: 100px;
     line-height: 100px;
