--- a/FreeCodeCampPlayGround/Content/profile.css
+++ b/FreeCodeCampPlayGround/Content/profile.css
@@ -91,27 +91,6 @@ nav ul {
     font-weight: bold;
 }
 
-.show-all {
-    text-decoration: none;
-    display: block;
-    width: 200px;
-    height: 30px;
-    margin: 20px auto 90px;
-    background: #e0ebe8;
-    color: #008080;
-    font-weight: bold;
-    font-size: 1em;
-    border: 2px solid #90C695;
-    border-radius: 4px;
-    cursor: pointer;
-    padding-top: 10px;
-}
-
-
-    .show-all:hover {
-        background: #E4F1FE;
-        color: green;
-    }
 
 @media only screen and (max-width: 500px) {
     nav ul {
@@ -129,6 +108,7 @@ nav ul {
 
 .contact {
     background: linear-gradient(rgba(0, 36, 50, 0.5), rgba(0, 0, 0, 0.2)), #445e60;
+    box-shadow: -1px 5px 20px 10px rgba(0, 36, 50, 0.5);
     padding-bottom: 100px;
 }
 
@@ -142,12 +122,13 @@ nav ul {
 }
 
 .contact-details {
+
     display: inline-block;
     font-weight: bold;
     margin: 0 35px 45px 35px;
     list-style-type: none;
     border-radius: 10%;
-    width: 100px;
+    width: 180px;
     height: 100px;
     line-height: 100px;
     background: #e0ebe8;
@@ -156,8 +137,9 @@ nav ul {
 }
 
     .contact-details:hover {
+        box-shadow: -1px 5px 20px 10px rgba(0, 36, 50, 0.5);
         background: #E4F1FE;
-        color: green;
+        color: black;
     }
 
 footer {
